[project]
name = "memcache"
version = "0.13.0"
description = "Memcached client for Python"
authors = [{ name = "AN Long", email = "aisk1988@gmail.com" }]
requires-python = "~=3.7.0"
readme = "README.md"
dependencies = ["hashring>=1.5.1,<2"]

[dependency-groups]
dev = [
    "flake8>=3.8.4,<4",
    "black~=20.8b1",
    "mypy>=0.930,<0.931",
    "pytest>=6.2.1,<7",
    "pytest-asyncio>=0.15.1,<0.16",
    "types-dataclasses>=0.6,<0.7 ; python_version >= '3.6' and python_version < '3.7'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
